--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,19 +5,16 @@
 </head>
 <body>
 	<div>
-		<h1><a href="">Elsas blogg</a></h1>
+    	<h1><a href="/">Elsas blogg</a></h1>
 	</div>
 
-	<div>
-    	<p>published: 14.06.2014, 12:14</p>
-   		<h2><a href="">Första inlägget</a></h2>
-    <p>Hej, här är mitt första inlägg!.</p>
-	</div>
+	{% for post in posts %}
+	    <div>
+	        <p>published: {{ post.published_date }}</p>
+	        <h1><a href="">{{ post.title }}</a></h1>
+	        <p>{{ post.text|linebreaksbr }}</p>
+	    </div>
+	{% endfor %}
 
-	<div>
-	    <p>published: 14.06.2014, 12:14</p>
-	    <h2><a href="">Andra inlägget</a></h2>
-	    <p>123456789</p>
-	</div>
-	</body>
+</body>
 </html>
